--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = adafruit/Adafruit PWM Servo Driver Library@^3.0.2
+
+upload_protocol = espota
+upload_port = 192.168.8.61
+upload_flags = --port=3232
